# grokking-simplicity

chapter-03/coupon-mailer-python/: pyproject.toml
chapter-03/coupon-mailer-python/coupon_mailer/: __main__.py
chapter-06/shopping-cart-python/: pyproject.toml
chapter-06/shopping-cart-python/shopping_cart/: __main__.py  external.py
chapter-13/compute/: README.md  compute-with-pydash.py  compute.clj  compute.js  compute.py  package-lock.json  package.json  pyproject.toml
